plugins {
    alias(libs.plugins.android.application)
}

def releaseSigningProps = new Properties()
def releaseSigningPropsFile = rootProject.file("keystore.properties")
if (releaseSigningPropsFile.exists()) {
    releaseSigningPropsFile.withInputStream { stream ->
        releaseSigningProps.load(stream)
    }
}

def resolveSigningValue = { String key ->
    return releaseSigningProps.getProperty(key)
        ?: (project.hasProperty(key) ? project.findProperty(key)?.toString() : null)
        ?: System.getenv(key)
}

android {
    namespace = 'com.citadawn.speechapp'
    compileSdk = 36

    signingConfigs {
        release {
            def keyAliasValue = resolveSigningValue("VOICE_DAO_RELEASE_KEY_ALIAS")
            def keyPasswordValue = resolveSigningValue("VOICE_DAO_RELEASE_KEY_PASSWORD")
            def storeFileValue = resolveSigningValue("VOICE_DAO_RELEASE_STORE_FILE")
            def storePasswordValue = resolveSigningValue("VOICE_DAO_RELEASE_STORE_PASSWORD")

            keyAlias = keyAliasValue ?: "debug"
            keyPassword = keyPasswordValue ?: "android"
            storeFile = storeFileValue ? file(storeFileValue) : file(System.getProperty("user.home") + "/.android/debug.keystore")
            storePassword = storePasswordValue ?: "android"
        }
    }

    defaultConfig {
        applicationId = "com.citadawn.speechapp"
        minSdk = 24
        targetSdk = 36
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.release
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    // 禁用语言分割，避免Play Core警告
    bundle {
        language {
            enableSplit = false
        }
    }
    lint {
        abortOnError true
        warningsAsErrors false
    }

}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}